Ajout de commentaires, création d'un package.json, autoprefixer

--- a/css/style.css
+++ b/css/style.css
@@ -1,511 +1,1 @@
-.background {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #eaeaea;
-  animation: loader-ending 0s 3s forwards;
-  position: fixed;
-  z-index: 2;
-}
-.background__loader {
-  width: 5rem;
-  height: 5rem;
-  border: 0.3rem solid;
-  border-color: #9356DC transparent #FF79DA transparent;
-  border-radius: 50%;
-  animation: loader 750ms infinite ease;
-}
-
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes loader-ending {
-  100% {
-    transform: translate(500rem);
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: "Roboto";
-}
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-family: "Roboto";
-}
-
-header {
-  width: 100%;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 4px #5a5a5a;
-  position: relative;
-  z-index: 1;
-}
-header img {
-  width: 200px;
-}
-header a {
-  color: black;
-  position: absolute;
-  left: 2rem;
-}
-
-.Explore {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.Explore__SearchBar {
-  width: 100%;
-}
-.Explore form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #eaeaea;
-}
-.Explore input {
-  width: 150px;
-  height: 50px;
-  border: 0;
-  outline: 0;
-  background: #eaeaea;
-}
-.Explore input::placeholder {
-  font-weight: bold;
-  color: black;
-}
-.Explore span {
-  width: 2rem;
-}
-.Explore__Title {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-  padding: 1rem 3rem 3rem 3rem;
-  line-height: 2rem;
-  background-color: #f7f7f7;
-}
-.Explore__Title > p {
-  font-weight: 300;
-  font-size: 20px;
-  margin-top: 0;
-}
-.Explore__Btn {
-  width: 250px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2rem;
-  background: linear-gradient(#FF79DA, #9356DC);
-  box-shadow: 0px 5px 20px #a7a7a7;
-  position: relative;
-  transition: 400ms;
-}
-.Explore__Btn:hover {
-  opacity: 0.8;
-  box-shadow: 0 5px 20px #5a5a5a;
-}
-.Explore__Btn p {
-  color: white;
-  font-size: 18px;
-}
-
-.Function {
-  padding: 2rem;
-}
-.Function__All-Box {
-  display: flex;
-  flex-direction: column;
-}
-@media screen and (min-width: 992px) {
-  .Function__All-Box {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-.Function__Box {
-  display: flex;
-  background-color: #f7f7f7;
-  border-radius: 1rem;
-  box-shadow: 2px 2px 15px #c0c0c0;
-  position: relative;
-}
-.Function__Box:nth-child(2) {
-  margin: 1rem 0 1rem 0;
-}
-@media screen and (min-width: 992px) {
-  .Function__Box {
-    width: 30%;
-  }
-}
-.Function__Box:hover span {
-  color: #9356DC;
-}
-.Function__Box:hover {
-  cursor: pointer;
-  background: #f2eafb;
-  transition: 250ms;
-}
-.Function__Number {
-  width: 2rem;
-  height: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 3rem;
-  background-color: #9356DC;
-  color: white;
-  position: absolute;
-  left: -1rem;
-  top: -0.3rem;
-}
-.Function span {
-  width: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: gray;
-}
-@media screen and (min-width: 992px) {
-  .Function span {
-    width: 2rem;
-    margin-left: 2.5rem;
-    margin-right: 0.75rem;
-  }
-}
-.Function p {
-  font-weight: 600;
-}
-
-@keyframes animation-heart {
-  0% {
-    opacity: 1;
-    transform: translateY(10rem) scale(2.5) rotateZ(180deg);
-    animation-timing-function: cubic-bezier(0.09, 0.93, 0.31, 1);
-  }
-  24% {
-    transform: scale(1);
-  }
-  25%, 30%, 34% {
-    transform: rotate(-10deg) scale(1.5);
-    animation-timing-function: cubic-bezier(1, -0.01, 0, 0.99);
-  }
-  27%, 31%, 37% {
-    transform: rotateZ(10deg) scale(1.5);
-    animation-timing-function: cubic-bezier(1, -0.01, 0, 0.99);
-  }
-  45% {
-    transform: scale(1);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1) translateY(0);
-  }
-}
-.Restaurants {
-  padding: 1.5rem;
-}
-@media screen and (min-width: 992px) {
-  .Restaurants {
-    background: #f7f7f7;
-  }
-}
-@media screen and (min-width: 992px) {
-  .Restaurants__All-Cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-}
-
-.Restaurants__Cards {
-  display: block;
-  margin-bottom: 1rem;
-  background: white;
-  color: black;
-  border-radius: 1rem;
-  box-shadow: 0 10px 20px #dadada;
-  position: relative;
-}
-@media screen and (min-width: 992px) {
-  .Restaurants__Cards {
-    width: 290px;
-    margin: 1rem;
-  }
-}
-.Restaurants__Cards__Text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-between;
-}
-.Restaurants__Cards__Text .heart {
-  position: relative;
-  margin-right: 2rem;
-}
-.Restaurants__Cards__Text .heart .full {
-  position: absolute;
-  color: red;
-  opacity: 0;
-}
-.Restaurants__Cards__Text:hover .full {
-  position: absolute;
-  animation: animation-heart 3s forwards;
-}
-.Restaurants__Cards a {
-  color: black;
-  margin-bottom: 1rem;
-}
-.Restaurants__Cards > img {
-  width: 100%;
-  height: 225px;
-  object-fit: cover;
-  border-radius: 1rem 1rem 0 0;
-}
-.Restaurants__Cards h3 {
-  font-weight: 800;
-  margin: 0 0 0 1rem;
-}
-.Restaurants__Cards p {
-  font-weight: 400;
-  margin: 0 0 0.5rem 1rem;
-}
-.Restaurants__Cards__New {
-  width: 8rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0.2rem;
-  background: #99E2D0;
-  color: #2c9c81;
-  font-weight: 600;
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-}
-
-footer {
-  background-color: #353535;
-  color: white;
-  padding: 2rem 0 1rem 2rem;
-}
-footer h4 {
-  font-family: Shrikhand;
-  font-size: 20px;
-  font-weight: 100;
-  margin: 0;
-  margin-bottom: 0.3rem;
-}
-footer li {
-  height: 2rem;
-  display: flex;
-  align-items: center;
-}
-footer ul {
-  padding: 0;
-}
-footer span {
-  width: 2rem;
-}
-footer a {
-  color: white;
-  display: flex;
-  align-items: baseline;
-}
-
-.Banner img {
-  width: 100%;
-  height: 511px;
-  object-fit: cover;
-}
-
-.Menu {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: #eaeaea;
-  border-radius: 3rem 3rem 0 0;
-  padding: 2rem;
-  position: relative;
-  top: -3rem;
-  margin-bottom: -3rem;
-}
-.Menu__Title {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-.Menu h1 {
-  font-family: "Shrikhand";
-  font-weight: 400;
-}
-@media screen and (min-width: 992px) {
-  .Menu__All-Cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-.Menu__Category-Cards {
-  position: relative;
-}
-@media screen and (min-width: 992px) {
-  .Menu__Category-Cards {
-    width: 420px;
-    margin: 1rem 1rem 0 1rem;
-  }
-}
-.Menu h2 {
-  font-size: 20px;
-  margin: 0 0 2rem 1rem;
-}
-.Menu h2::after {
-  content: "";
-  width: 3rem;
-  height: 0.3rem;
-  background: #99E2D0;
-  position: absolute;
-  top: 2rem;
-  left: 1rem;
-}
-.Menu .btn {
-  width: 250px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2rem;
-  background: linear-gradient(#FF79DA, #9356DC);
-  box-shadow: 0px 5px 20px #a7a7a7;
-  position: relative;
-  transition: 400ms;
-  margin: auto;
-  margin-top: 2rem;
-}
-.Menu .btn:hover {
-  opacity: 0.8;
-  box-shadow: 0 5px 20px #5a5a5a;
-}
-.Menu .btn p {
-  color: white;
-  font-size: 18px;
-}
-.Menu .heart {
-  position: relative;
-  margin-right: 2rem;
-}
-.Menu .heart .full {
-  position: absolute;
-  color: red;
-  opacity: 0;
-}
-.Menu:hover .full {
-  position: absolute;
-  animation: animation-heart 3s forwards;
-}
-
-.Cards {
-  display: flex;
-  background-color: #f7f7f7;
-  border-radius: 1rem;
-  box-shadow: 2px 2px 15px #c0c0c0;
-  margin-bottom: 1rem;
-  overflow: hidden;
-  white-space: nowrap;
-  justify-content: space-between;
-  cursor: pointer;
-  animation: anim-cards 1s forwards;
-  opacity: 0;
-}
-.Cards__Text {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 0 1rem 1rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.Cards__Text > h3, .Cards__Text p {
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.Cards > p {
-  display: flex;
-  align-items: flex-end;
-  margin-left: auto;
-  padding: 0 1rem;
-}
-.Cards__Add {
-  width: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: -5rem;
-  background: #99E2D0;
-  transform: rotateZ(180deg);
-  transition: all 500ms;
-  flex-shrink: 0;
-}
-.Cards__Add span {
-  color: white;
-  transition: 200ms 200ms;
-}
-.Cards:hover .Cards__Add {
-  margin-right: 0;
-}
-.Cards:hover span {
-  transform: rotateZ(180deg);
-}
-
-.anim-1 {
-  animation-delay: 250ms;
-}
-
-.anim-2 {
-  animation-delay: 500ms;
-}
-
-.anim-3 {
-  animation-delay: 750ms;
-}
-
-.anim-4 {
-  animation-delay: 1000ms;
-}
-
-@keyframes anim-cards {
-  from {
-    transform: translateY(1rem);
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
+*{box-sizing:border-box}body{margin:0;font-family:"Roboto"}a{text-decoration:none}h1{font-family:"Roboto"}header{width:100%;height:70px;display:flex;justify-content:center;align-items:center;box-shadow:0 0 4px #5a5a5a;position:relative;z-index:1}header img{width:200px}header a{color:#000;position:absolute;left:2rem}.background{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:#eaeaea;animation:loader-ending 0s 3s forwards;position:fixed;z-index:2}.background__loader{width:5rem;height:5rem;border:.3rem solid;border-color:#9356dc rgba(0,0,0,0) #ff79da rgba(0,0,0,0);border-radius:50%;animation:loader 750ms infinite ease}@keyframes loader{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}@keyframes loader-ending{100%{transform:translateY(500rem)}}@keyframes animation-heart{0%{opacity:1;transform:translateY(10rem) scale(2.5) rotateZ(180deg);animation-timing-function:cubic-bezier(0.09, 0.93, 0.31, 1)}24%{transform:scale(1)}25%,30%,34%{transform:rotate(-10deg) scale(1.5);animation-timing-function:cubic-bezier(1, -0.01, 0, 0.99)}27%,31%,37%{transform:rotateZ(10deg) scale(1.5);animation-timing-function:cubic-bezier(1, -0.01, 0, 0.99)}45%{transform:scale(1)}100%{opacity:1;transform:scale(1) translateY(0)}}.Explore{display:flex;justify-content:center;align-items:center;flex-direction:column}.Explore__SearchBar{width:100%}.Explore form{display:flex;justify-content:center;align-items:center;background:#eaeaea}.Explore input{width:150px;height:50px;border:0;outline:0;background:#eaeaea}.Explore input::placeholder{font-weight:bold;color:#000}.Explore span{width:2rem}.Explore__Title{width:100%;display:flex;justify-content:center;align-items:center;text-align:center;flex-direction:column;padding:1rem 3rem 3rem 3rem;line-height:2rem;background-color:#f7f7f7}.Explore__Title>p{font-weight:300;font-size:20px;margin-top:0}.Explore__Btn{width:250px;height:60px;display:flex;justify-content:center;align-items:center;border-radius:2rem;background:linear-gradient(#FF79DA, #9356DC);box-shadow:0px 5px 20px #a7a7a7;position:relative;transition:400ms}.Explore__Btn:hover{opacity:.8;box-shadow:0 5px 20px #5a5a5a}.Explore__Btn p{color:#fff;font-size:18px}.Function{padding:2rem}.Function__All-Box{display:flex;flex-direction:column}@media screen and (min-width: 992px){.Function__All-Box{flex-direction:row;align-items:center;justify-content:space-around}}.Function__Box{display:flex;background-color:#f7f7f7;border-radius:1rem;box-shadow:2px 2px 15px silver;position:relative}.Function__Box:nth-child(2){margin:1rem 0 1rem 0}@media screen and (min-width: 992px){.Function__Box{width:30%}}.Function__Box:hover span{color:#9356dc}.Function__Box:hover{cursor:pointer;background:#f2eafb;transition:250ms}.Function__Number{width:2rem;height:2rem;display:flex;justify-content:center;align-items:center;border-radius:3rem;background-color:#9356dc;color:#fff;position:absolute;left:-1rem;top:-0.3rem}.Function span{width:100px;display:flex;justify-content:center;align-items:center;color:gray}@media screen and (min-width: 992px){.Function span{width:2rem;margin-left:2.5rem;margin-right:.75rem}}.Function p{font-weight:600}.Restaurants{padding:1.5rem}@media screen and (min-width: 992px){.Restaurants{background:#f7f7f7}}@media screen and (min-width: 992px){.Restaurants__All-Cards{display:flex;justify-content:center;align-items:center;flex-wrap:wrap}}.Restaurants__Cards{display:block;margin-bottom:1rem;background:#fff;color:#000;border-radius:1rem;box-shadow:0 10px 20px #dadada;position:relative}@media screen and (min-width: 992px){.Restaurants__Cards{width:290px;margin:1rem}}.Restaurants__Cards__Text{display:flex;justify-content:center;align-items:center;justify-content:space-between}.Restaurants__Cards__Text .heart{position:relative;margin-right:2rem}.Restaurants__Cards__Text .heart .full{position:absolute;color:red;opacity:0}.Restaurants__Cards__Text:hover .full{position:absolute;animation:animation-heart 3s forwards}.Restaurants__Cards a{color:#000;margin-bottom:1rem}.Restaurants__Cards>img{width:100%;height:225px;object-fit:cover;border-radius:1rem 1rem 0 0}.Restaurants__Cards h3{font-weight:800;margin:0 0 0 1rem}.Restaurants__Cards p{font-weight:400;margin:0 0 .5rem 1rem}.Restaurants__Cards__New{width:8rem;display:flex;justify-content:center;align-items:center;border-radius:.2rem;background:#99e2d0;color:#2c9c81;font-weight:600;position:absolute;right:1rem;top:1rem}footer{background-color:#353535;color:#fff;padding:2rem 0 1rem 2rem}footer h4{font-family:Shrikhand;font-size:20px;font-weight:100;margin:0;margin-bottom:.3rem}footer ul{padding:0}footer li{height:2rem;display:flex;align-items:center}footer span{width:2rem}footer a{color:#fff;display:flex;align-items:baseline}.Cards{display:flex;background-color:#f7f7f7;border-radius:1rem;box-shadow:2px 2px 15px silver;justify-content:space-between;margin-bottom:1rem;overflow:hidden;white-space:nowrap;cursor:pointer;animation:anim-cards 1s forwards;opacity:0}.Cards__Text{display:flex;flex-direction:column;padding:1rem 0 1rem 1rem;overflow:hidden;text-overflow:ellipsis}.Cards__Text>h3,.Cards__Text p{margin:0;overflow:hidden;text-overflow:ellipsis}.Cards>p{display:flex;align-items:flex-end;margin-left:auto;padding:0 1rem}.Cards__Add{width:5rem;display:flex;justify-content:center;align-items:center;margin-right:-5rem;background:#99e2d0;transform:rotateZ(180deg);transition:all 500ms;flex-shrink:0}.Cards__Add span{color:#fff;transition:200ms 200ms}.Cards:hover .Cards__Add{margin-right:0}.Cards:hover span{transform:rotateZ(180deg)}.anim-1{animation-delay:250ms}.anim-2{animation-delay:500ms}.anim-3{animation-delay:750ms}.anim-4{animation-delay:1000ms}@keyframes anim-cards{from{transform:translateY(1rem)}to{transform:translateY(0);opacity:1}}.Banner img{width:100%;height:511px;object-fit:cover}.Menu{display:flex;justify-content:center;flex-direction:column;background:#eaeaea;border-radius:3rem 3rem 0 0;padding:2rem;position:relative;top:-3rem;margin-bottom:-3rem}.Menu__Title{display:flex;align-items:baseline;justify-content:space-between}.Menu h1{font-family:"Shrikhand";font-weight:400}@media screen and (min-width: 992px){.Menu__All-Cards{display:flex;flex-wrap:wrap;justify-content:center}}.Menu__Category-Cards{position:relative}@media screen and (min-width: 992px){.Menu__Category-Cards{width:420px;margin:1rem 1rem 0 1rem}}.Menu h2{font-size:20px;margin:0 0 2rem 1rem}.Menu h2::after{content:"";width:3rem;height:.3rem;background:#99e2d0;position:absolute;top:2rem;left:1rem}.Menu .btn{width:250px;height:60px;display:flex;justify-content:center;align-items:center;border-radius:2rem;background:linear-gradient(#FF79DA, #9356DC);box-shadow:0px 5px 20px #a7a7a7;position:relative;transition:400ms;margin:auto;margin-top:2rem}.Menu .btn:hover{opacity:.8;box-shadow:0 5px 20px #5a5a5a}.Menu .btn p{color:#fff;font-size:18px}.Menu .heart{position:relative;margin-right:2rem}.Menu .heart .full{position:absolute;color:red;opacity:0}.Menu:hover .full{position:absolute;animation:animation-heart 3s forwards}/*# sourceMappingURL=style.css.map */
