--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,4 +1,5 @@
-//LOADER DE CHARGEMENT DE LA PAGE D'ACCUEIL
+// BACKGROUND ET LOADER DE CHARGEMENT 
+// DE LA PAGE D'ACCUEIL
 
 .background {
   width:100%;
@@ -34,9 +35,8 @@
 
 @keyframes loader-ending {
   100% {
-      transform:translate(500rem);
+      transform:translateY(500rem);
   }
-
 }
 
 
