--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,20 +1,20 @@
-// PAGE PRINCIPAL OU REGLES COMMUNES
+// PAGE D'ACCUEIL OU REGLES COMMUNES
 
 @import "utils/variables.scss";
 @import "utils/maps.scss";
 @import "utils/mixins.scss";
-@import "components/loader.scss";
 @import "base/common-rules.scss";
-@import "components/button.scss";
 @import "pages/header.scss";
-@import "layouts/explore.scss";
+@import "components/loader.scss";
+@import "components/button.scss";
 @import "components/box.scss";
-@import "layouts/fonctionnement.scss";
 @import "components/heart.scss";
+@import "layouts/explore.scss";
+@import "layouts/fonctionnement.scss";
 @import "layouts/restaurants.scss";
 @import "pages/footer.scss";
 
 // PAGES DE MENUS
 
-@import "layouts/menus.scss";
 @import "components/cards.scss";
+@import "layouts/menus.scss";
