--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -1,8 +1,13 @@
+// FOOTER
+
 footer {
     background-color: darken($color-background,71%);
     color:white;
     padding:2rem 0 1rem 2rem;
+  
     
+// TITRE OHMYFOOD
+
     h4 {
         font-family: Shrikhand;
         font-size: $font_large;
@@ -10,17 +15,23 @@ footer {
         margin:0;
         margin-bottom:.3rem;
     }
-    
+
+
+// LISTE DU FOOTER
+
+    ul {
+        padding:0;
+    }
+
     li {
         height:2rem;
         display:flex;
         align-items:center;
     }
     
-    ul {
-        padding:0;
-    }
-    
+
+// ICONES ET LIENS DU FOOTER
+
     span {
         width:2rem;
     }
