--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -1,3 +1,5 @@
+// HEADER
+
 header {
     width:100%;
     height:70px;
@@ -6,9 +8,16 @@ header {
     position:relative;
     z-index: 1;
     
+
+// LOGO DU SITE
+
     & img {
         width: 200px;
     }
+
+
+// FLECHES DE RETOUR A LA PAGE D'ACCUEIL
+// UNIQUEMENT SUR LES PAGES DE MENUS
 
     & a {
         color:black;
