Suppression Autoprefixer pour cause d'erreurs, changement animation bouton j'aime

--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -1,15 +1,19 @@
 // BOUTON J'AIME
 
 @mixin like-button {
-
+    @content;
     .heart {
         position:relative;
-        margin-right:2rem;
-
-        & .full {
+        & .fa-solid {
             position:absolute;
-            color:red;
-            opacity:0;
+            opacity:0; 
+            color:transparent;
+            -webkit-background-clip: text;
+            background-image:linear-gradient(to right, blue, pink);
+            &:hover {
+                position:absolute;
+                animation: animation-heart 1000ms forwards;
+            }
         }
     }
 }
@@ -18,33 +22,10 @@
 
 @keyframes animation-heart{
     0% {
-        opacity:1;
-        transform:translateY(10rem) scale(2.5) rotateZ(180deg);
+        opacity:0;
         animation-timing-function: cubic-bezier(.09,.93,.31,1);
     }
-
-    24% {
-        transform:scale(1);
-
-    }
-    
-    25%,30%, 34% {
-        transform:rotate(-10deg) scale(1.5);
-        animation-timing-function: cubic-bezier(1,-0.01,0,.99);
-
-    }
-
-    27%, 31%, 37% {
-        transform: rotateZ(10deg) scale(1.5);
-        animation-timing-function: cubic-bezier(1,-0.01,0,.99);
-    }
-
-    45% {
-        transform:scale(1);
-    }
-
     100% {
         opacity:1;
-        transform: scale(1) translateY(0);
     }
 }
