--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -8,6 +8,7 @@
             position:absolute;
             opacity:0; 
             color:transparent;
+            background-clip: text;
             -webkit-background-clip: text;
             background-image:linear-gradient(to right, blue, pink);
             &:hover {
