--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,8 @@ header a {
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  background-image: linear-gradient(to right, blue, pink);
+  background-image: linear-gradient(45deg, #FF79DA, #9356DC);
+  cursor: pointer;
 }
 .Restaurants__Cards__Text .heart .fa-solid:hover {
   position: absolute;
@@ -490,7 +491,8 @@ footer a {
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  background-image: linear-gradient(to right, blue, pink);
+  background-image: linear-gradient(45deg, #FF79DA, #9356DC);
+  cursor: pointer;
 }
 .Menu .heart .fa-solid:hover {
   position: absolute;
