--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -10,7 +10,8 @@
             color:transparent;
             background-clip: text;
             -webkit-background-clip: text;
-            background-image:linear-gradient(to right, blue, pink);
+            background-image:linear-gradient(45deg, $color-secondary, $color-primary);
+            cursor:pointer;
             &:hover {
                 position:absolute;
                 animation: animation-heart 1000ms forwards;
