--- a/sass/layouts/_menus.scss
+++ b/sass/layouts/_menus.scss
@@ -1,7 +1,7 @@
 //PHOTO DE PRESENTATION
 
 .Banner {
-    & img {
+    img {
         width:100%;
         height:511px;
         object-fit: cover;
